# XOP-Algorithms-Data

./: README.md
data/: AllDocs_WithCodes.docx  Alphabetical_Codebook.docx  CodeGroups_and_Members.docx  CodesByDocTable.csv  XOP_Encoding_Proj.xml
haskell/: LICENSE  README.md  stack.yaml  xop.cabal
haskell/src/: DocEncodings.hs  ExplanationTree.hs  StackTree.hs
