name:                xop
version:             1.0
homepage:            https://github.com/lambda-land/XOP-Algorithms-Data
license:             BSD3
license-file:        LICENSE
author:              Eric Walkingshaw and Jeffrey Young
maintainer:          walkiner@oregonstate.edu
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.22

source-repository head
  type:     git
  location: https://github.com/lambda-land/XOP-Algorithms-Data
  branch:   master

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
      DocEncodings
    , ExplanationTree
    , StackTree
  build-depends:
      base
    , containers
